- Fixed links that were broken in previous push

--- a/css/index-style.css
+++ b/css/index-style.css
@@ -250,7 +250,7 @@ transform: translate(-50%, -50%);
 	top: 46%;
 	left: 50%;
 	transform: translate(-50%, -50%);
-	background-image: url("../images/iPhoneXS-Wallpaper.png");
+	background-image: url("../images/iPhoneXS-wallpaper.png");
 	background-repeat: no-repeat;
 	background-position: center;
 	background-size: cover;
